# mazes

./: .gitignore  README.md  mazes.cabal
app/: Main.hs
src/: BetterGrid.hs  BinaryTreeMaze.hs  Draw.hs  Grid.hs
src/Maze/: BinaryTreeMaze.hs  DepthFirst.hs
