name:                mazes
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/mazes#readme
license:             BSD3
license-file:        LICENSE
author:              Eugen Wybitul
maintainer:          wybitul.evzen@gmail.com
copyright:           2017 Eugen Wybitul
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Maze.DepthFirst, Draw
  other-modules:       Grid
  build-depends:       base >= 4.7 && < 5
                     , fgl
                     , random
                     , random-shuffle
                     , MonadRandom
                     , cairo
  default-language:    Haskell2010

executable mazes-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mazes
  default-language:    Haskell2010

test-suite mazes-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , mazes
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/mazes
